--- a/index.fbo.html
+++ b/index.fbo.html
@@ -38,43 +38,6 @@ float sechSq(float x) {
 	float y = sech(x);
 	return y * y;
 }
-
-#ifdef USE_TEXTURE_FLOAT
-vec4 floatToFixed(float v) { return vec4(v, 0., 0., 1.); }
-float fixedToFloat(vec4 c) { return c.x; }
-#elif 1
-//http://stackoverflow.com/questions/9882716/packing-float-into-vec4-how-does-this-code-work
-//this typically runs over a range of 0-1
-//I'm changing it to -MAX/2,MAX/2
-#define FIXED_MAX	16.
-#define FIXED_SCALE 	32.	//256.
-vec4 floatToFixed(float v) {
-	v = v / FIXED_MAX + .5;
-	const vec4 bit_shift = vec4(FIXED_SCALE*FIXED_SCALE*FIXED_SCALE, FIXED_SCALE*FIXED_SCALE, FIXED_SCALE, 1.0);
-	const vec4 bit_mask  = vec4(0.0, 1.0/FIXED_SCALE, 1.0/FIXED_SCALE, 1.0/FIXED_SCALE);
-	vec4 res = fract(v * bit_shift);
-	res -= res.xxyz * bit_mask;
-	return res;
-}
-
-float fixedToFloat(vec4 c) {
-	const vec4 bit_shift = vec4(1.0/(FIXED_SCALE*FIXED_SCALE*FIXED_SCALE), 1.0/(FIXED_SCALE*FIXED_SCALE), 1.0/FIXED_SCALE, 1.0);
-	float v = dot(c, bit_shift);
-	v = (v - .5) * FIXED_MAX;
-	return v;
-}
-#else
-vec4 floatToFixed(float v) {
-	//4 bits per channel, and alpha remains full, so 12 bits total
-	vec4 res;
-	res.xyz = mod(v * vec3(1./16., 1., 16.), vec3(1.));
-	res.w = step(v, 0.);
-	return res;
-}
-float fixedToFloat(vec4 c) {
-	return (c.w * 2. - 1.) * dot(c.xyz, vec3(16., 1., 1./16.));
-}
-#endif
 		</script>
 		<script id='cube-vsh' type='x-shader/x-vertex'>
 attribute vec2 vtx;
@@ -90,45 +53,22 @@ void main() {
 		<script id='cube-fsh' type='x-shader/x-fragment'>
 varying vec2 uv;
 uniform samplerCube skyTex;
-uniform sampler2D lightVelXTex;
-uniform sampler2D lightVelYTex;
-uniform sampler2D lightVelZTex;
+uniform sampler2D lightVelTex;
 void main() {
 	/* works */
-	vec3 dir;
-	dir.x = fixedToFloat(texture2D(lightVelXTex, uv));
-	dir.y = fixedToFloat(texture2D(lightVelYTex, uv));
-	dir.z = fixedToFloat(texture2D(lightVelZTex, uv));
+	vec3 dir = texture2D(lightVelTex, uv).xyz;
 	gl_FragColor.xyz = textureCube(skyTex, dir).xyz;
 	gl_FragColor.w = 1.; 
 	/**/
+	
 	/* debugging * /
-	vec3 dst;
-	vec4 reg;
-	reg = floatToFixed(vtxv.x);
-	dst.x = fixedToFloat(reg);
-	reg = floatToFixed(vtxv.y);
-	dst.y = fixedToFloat(reg);
-	reg = floatToFixed(vtxv.z);
-	dst.z = fixedToFloat(reg);
-	gl_FragColor.xyz = textureCube(skyTex, dst).xyz;
-	gl_FragColor.w = 1.; 
-
-	/**/
-	/* debugging * /
-	gl_FragColor.x = fixedToFloat(texture2D(lightVelXTex, uv)) * .5 + .5;
-	gl_FragColor.y = fixedToFloat(texture2D(lightVelYTex, uv)) * .5 + .5;
-	gl_FragColor.z = fixedToFloat(texture2D(lightVelZTex, uv)) * .5 + .5;
-	gl_FragColor.w = 1.; 
-	/**/
-	/* more debugging * /
-	gl_FragColor.xyz = texture2D(lightVelXTex, uv).xyz;
+	gl_FragColor.xyz = texture2D(lightVelTex, uv).xyz * .5 + .5;
 	gl_FragColor.w = 1.; 
 	/**/
 
 }
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:pos:vel:x:y:z:t:vsh' type='x-shader/x-vertex'>
+		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:pos:vel:vsh' type='x-shader/x-vertex'>
 attribute vec2 vtx;
 varying vec3 vtxv;
 uniform mat3 rotation;
@@ -137,68 +77,50 @@ void main() {
 	gl_Position = vec4(vtx * 2. - 1., 0., 1.);
 }
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:pos:x:fsh' type='x-shader/x-fragment'>
+		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:pos:fsh' type='x-shader/x-fragment'>
+#extension GL_OES_texture_float : enable
 varying vec3 vtxv;
-uniform float objectCenter;
+uniform float objectDist;
 void main() {
 	vec3 dir = normalize(vtxv);
-	gl_FragColor = floatToFixed(dir.x - objectCenter);
+	gl_FragColor.xyz = dir;
+	gl_FragColor.x -= objectDist;
+	gl_FragColor.w = 0.;
 }
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:vel:x:fsh' type='x-shader/x-fragment'>
-varying vec3 vtxv;
-void main() {
-	vec3 dir = normalize(vtxv);
-	gl_FragColor = floatToFixed(dir.x);
-}
+		<script id='Black_Hole:reset:vel:fsh' type='x-shader/x-fragment'>
+uniform float objectDist;
+uniform float blackHoleMass;
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:pos:vel:y:fsh' type='x-shader/x-fragment'>
-varying vec3 vtxv;
-void main() {
-	vec3 dir = normalize(vtxv);
-	gl_FragColor = floatToFixed(dir.y);
-}
+		<script id='Alcubierre_Warp_Drive_Bubble:reset:vel:fsh' type='x-shader/x-fragment'>
+uniform float objectDist;
+uniform float warpBubbleThickness;
+uniform float warpBubbleVelocity;
+uniform float warpBubbleRadius;
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:pos:vel:z:fsh' type='x-shader/x-fragment'>
+		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:vel:fsh' type='x-shader/x-fragment'>
 varying vec3 vtxv;
 void main() {
-	vec3 dir = normalize(vtxv);
-	gl_FragColor = floatToFixed(dir.z);
-}
+	vec3 vel = normalize(vtxv);
+	gl_FragColor.xyz = vel;
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:pos:t:fsh' type='x-shader/x-fragment'>
-varying vec3 vtxv;
-void main() {
-	gl_FragColor = floatToFixed(0.);
-}
-		</script>	
-		<script id='Black_Hole:reset:vel:t:fsh' type='x-shader/x-fragment'>
+		<script id='Black_Hole:reset:vel:fsh' type='x-shader/x-fragment'>
 //when initializing our metric:
 //g_ab v^a v^b = 0 for our metric g
 // (-1 + 2M/r) vt^2 + (vx^2 + vy^2 + vz^2) / (1 - 2M/r) = 0
 // (1 - 2M/r) vt^2 = (vx^2 + vy^2 + vz^2) / (1 - 2M/r)
 // vt^2 = (vx^2 + vy^2 + vz^2) / (1 - 2M/r)^2
 // vt = ||vx,vy,vz|| / (1 - 2M/r)
-varying vec3 vtxv;
-uniform float blackHoleMass;
-void main() {
-	vec3 vel = normalize(vtxv);
-	float r = length(vel);
+	vec3 pos = vel;
+	pos.x -= objectDist;
+	float r = length(pos);
 	float oneMinus2MOverR = 1. - 2. * blackHoleMass / r;
-	float vt = 1. / oneMinus2MOverR;
-	gl_FragColor = floatToFixed(vt);
+	gl_FragColor.w = 1. / oneMinus2MOverR;
 }
 		</script>
-		<script id='Alcubierre_Warp_Drive_Bubble:reset:vel:t:fsh' type='x-shader/x-fragment'>
-varying vec3 vtxv;
-uniform float objectCenter;
-uniform float warpBubbleThickness;
-uniform float warpBubbleVelocity;
-uniform float warpBubbleRadius;
-void main() {
-	vec3 vel = normalize(vtxv);
+		<script id='Alcubierre_Warp_Drive_Bubble:reset:vel:fsh' type='x-shader/x-fragment'>
 	vec3 pos = vel;
-	pos.x -= objectCenter;
+	pos.x -= objectDist;
 	float r = length(pos);
 	float sigmaFront = warpBubbleThickness * (r + warpBubbleRadius);
 	float sigmaCenter = warpBubbleThickness * r;
@@ -209,14 +131,14 @@ void main() {
 	float dfScalar = sechDiff / (2. * r * tanhSigmaCenter);				
 	float vf = f * warpBubbleVelocity;
 	float vf2 = vf * vf;
-	float vt = 
+	gl_FragColor.w = 
 		(warpBubbleVelocity * f + sqrt(
 			vf2 * (1. + vel.x * vel.x) + 1.
 		)) / (-1. + vf2);
-	gl_FragColor = floatToFixed(vt);
 }
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:vel:x:y:z:t:vsh' type='x-shader/x-vertex'>
+		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:vel:vsh' type='x-shader/x-vertex'>
+#extension GL_OES_texture_float : enable
 attribute vec2 vtx;
 varying vec2 uv;
 varying vec3 vtxv;
@@ -227,58 +149,32 @@ void main() {
 	gl_Position = vec4(vtx * 2. - 1., 0., 1.);
 }
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:vel:x:y:z:t:fsh' type='x-shader/x-fragment'>
+		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:vel:fsh' type='x-shader/x-fragment'>
 varying vec2 uv;
 varying vec3 vtxv;
 uniform float deltaLambda;
-uniform float objectCenter;
-uniform sampler2D lightPosXTex;
-uniform sampler2D lightPosYTex;
-uniform sampler2D lightPosZTex;
-uniform sampler2D lightPosTTex;
-uniform sampler2D lightVelXTex;
-uniform sampler2D lightVelYTex;
-uniform sampler2D lightVelZTex;
-uniform sampler2D lightVelTTex;
+uniform float objectDist;
+uniform sampler2D lightPosTex;
+uniform sampler2D lightVelTex;
 		</script>
-		<script id='Black_Hole:iterate:vel:x:y:z:t:fsh' type='x-shader/x-fragment'>
+		<script id='Black_Hole:iterate:vel:fsh' type='x-shader/x-fragment'>
 uniform float blackHoleMass;
 		</script>
-		<script id='Alcubierre_Warp_Drive_Bubble:iterate:vel:x:y:z:t:fsh' type='x-shader/x-fragment'>
+		<script id='Alcubierre_Warp_Drive_Bubble:iterate:vel:fsh' type='x-shader/x-fragment'>
 uniform float warpBubbleThickness;
 uniform float warpBubbleRadius;
 uniform float warpBubbleVelocity;
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:vel:x:y:z:t:fsh' type='x-shader/x-fragment'>
+		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:vel:fsh' type='x-shader/x-fragment'>
 void main() {
-	vec4 pos;
-	pos.x = fixedToFloat(texture2D(lightPosXTex, uv));
-	pos.y = fixedToFloat(texture2D(lightPosYTex, uv));
-	pos.z = fixedToFloat(texture2D(lightPosZTex, uv));
-	pos.w = fixedToFloat(texture2D(lightPosTTex, uv));
-	vec4 vel;
-	vel.x = fixedToFloat(texture2D(lightVelXTex, uv));
-	vel.y = fixedToFloat(texture2D(lightVelYTex, uv));
-	vel.z = fixedToFloat(texture2D(lightVelZTex, uv));
-	vel.w = fixedToFloat(texture2D(lightVelTTex, uv));
+	vec4 pos = texture2D(lightPosTex, uv);
+	vec4 vel = texture2D(lightVelTex, uv);
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:x:fsh' type='x-shader/x-fragment'>
-	gl_FragColor = floatToFixed(pos.x + deltaLambda * vel.x);
+		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:fsh' type='x-shader/x-fragment'>
+	gl_FragColor = pos + deltaLambda * vel;
 }
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:y:fsh' type='x-shader/x-fragment'>
-	gl_FragColor = floatToFixed(pos.y + deltaLambda * vel.y);
-}
-		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:z:fsh' type='x-shader/x-fragment'>
-	gl_FragColor = floatToFixed(pos.z + deltaLambda * vel.z);
-}
-		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:t:fsh' type='x-shader/x-fragment'>
-	gl_FragColor = floatToFixed(pos.w + deltaLambda * vel.w);
-}
-		</script>
-		<script id='Black_Hole:iterate:vel:x:y:z:t:fsh' type='x-shader/x-fragment'>
+		<script id='Black_Hole:iterate:vel:fsh' type='x-shader/x-fragment'>
 	float r = length(pos.xyz);
 	float oneMinus2MOverR = 1. - 2.*blackHoleMass/r;			
 	float posDotVel = dot(pos.xyz, vel.xyz);
@@ -287,28 +183,13 @@ void main() {
 	float invR2M = 1. / (r * oneMinus2MOverR);
 	float rMinus2MOverR2 = oneMinus2MOverR / r;
 	float MOverR2 = blackHoleMass / r2;
-		</script>
-		<script id='Black_Hole:iterate:vel:x:fsh' type='x-shader/x-fragment'>
-	float newVelX = vel.x - deltaLambda * MOverR2 * (rMinus2MOverR2 * pos.x * vel.w * vel.w + invR2M * (pos.x * velDotVel - 2. * vel.x * posDotVel));
-	gl_FragColor = floatToFixed(newVelX);
+	gl_FragColor.x = vel.x - deltaLambda * MOverR2 * (rMinus2MOverR2 * pos.x * vel.w * vel.w + invR2M * (pos.x * velDotVel - 2. * vel.x * posDotVel));
+	gl_FragColor.y = vel.y - deltaLambda * MOverR2 * (rMinus2MOverR2 * pos.y * vel.w * vel.w + invR2M * (pos.y * velDotVel - 2. * vel.y * posDotVel));
+	gl_FragColor.z = vel.z - deltaLambda * MOverR2 * (rMinus2MOverR2 * pos.z * vel.w * vel.w + invR2M * (pos.z * velDotVel - 2. * vel.z * posDotVel));
+	gl_FragColor.w = vel.w + deltaLambda * 2. * MOverR2 * invR2M * posDotVel * vel.w;
 }
 		</script>
-		<script id='Black_Hole:iterate:vel:y:fsh' type='x-shader/x-fragment'>
-	float newVelY = vel.y - deltaLambda * MOverR2 * (rMinus2MOverR2 * pos.y * vel.w * vel.w + invR2M * (pos.y * velDotVel - 2. * vel.y * posDotVel));
-	gl_FragColor = floatToFixed(newVelY);
-}
-		</script>
-		<script id='Black_Hole:iterate:vel:z:fsh' type='x-shader/x-fragment'>
-	float newVelZ = vel.z - deltaLambda * MOverR2 * (rMinus2MOverR2 * pos.z * vel.w * vel.w + invR2M * (pos.z * velDotVel - 2. * vel.z * posDotVel));
-	gl_FragColor = floatToFixed(newVelZ);
-}
-		</script>
-		<script id='Black_Hole:iterate:vel:t:fsh' type='x-shader/x-fragment'>
-	float newVelT = vel.w + deltaLambda * 2. * MOverR2 * invR2M * posDotVel * vel.w;
-	gl_FragColor = floatToFixed(newVelT);
-}
-		</script>
-		<script id='Alcubierre_Warp_Drive_Bubble:iterate:vel:x:y:z:t:fsh' type='x-shader/x-fragment'>
+		<script id='Alcubierre_Warp_Drive_Bubble:iterate:vel:fsh' type='x-shader/x-fragment'>
 	float r = length(pos.xyz);
 	float sigmaFront = warpBubbleThickness * (r + warpBubbleRadius);
 	float sigmaCenter = warpBubbleThickness * r;
@@ -320,9 +201,7 @@ void main() {
 	vec4 fv;
 	fv.xyz = warpBubbleThickness * pos.xyz * dfScalar;
 	fv.t = -warpBubbleVelocity * warpBubbleThickness * pos.x * dfScalar;
-		</script>
-		<script id='Alcubierre_Warp_Drive_Bubble:iterate:vel:x:fsh' type='x-shader/x-fragment'>
-	float newVelX = vel.x - deltaLambda * ((f * f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity - f * fv.x * warpBubbleVelocity * warpBubbleVelocity - fv.t * warpBubbleVelocity) * vel.t * vel.t
+	gl_FragColor.x = vel.x - deltaLambda * ((f * f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity - f * fv.x * warpBubbleVelocity * warpBubbleVelocity - fv.t * warpBubbleVelocity) * vel.t * vel.t
 		- 2. * f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.x
 		- 2. * (f * f * fv.y * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity + fv.y * warpBubbleVelocity) / 2. * vel.t * vel.y
 		- 2. * (f * f * fv.z * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity + fv.z * warpBubbleVelocity) / 2. * vel.t * vel.z
@@ -330,25 +209,13 @@ void main() {
 		+ 2. * f * fv.y * warpBubbleVelocity * warpBubbleVelocity / 2. * vel.x * vel.y
 		+ 2. * f * fv.z * warpBubbleVelocity * warpBubbleVelocity / 2. * vel.x * vel.z
 	);
-	gl_FragColor = floatToFixed(newVelX);
-}
-		</script>
-		<script id='Alcubierre_Warp_Drive_Bubble:iterate:vel:y:fsh' type='x-shader/x-fragment'>
-	float newVelY = vel.y + deltaLambda * (f * fv.y * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.t
+	gl_FragColor.y = vel.y + deltaLambda * (f * fv.y * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.t
 		+ 2. * fv.y * warpBubbleVelocity / 2. * vel.t * vel.x
 	);
-	gl_FragColor = floatToFixed(newVelY);
-}
-		</script>
-		<script id='Alcubierre_Warp_Drive_Bubble:iterate:vel:z:fsh' type='x-shader/x-fragment'>
-	float newVelZ = vel.z + deltaLambda * (f * fv.z * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.t
+	gl_FragColor.z = vel.z + deltaLambda * (f * fv.z * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.t
 		+ 2. * fv.z * warpBubbleVelocity / 2. * vel.t * vel.x
 	);
-	gl_FragColor = floatToFixed(newVelZ);
-}
-		</script>
-		<script id='Alcubierre_Warp_Drive_Bubble:iterate:vel:t:fsh' type='x-shader/x-fragment'>
-	float newVelT = vel.t - deltaLambda * (f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.t
+	gl_FragColor.w = vel.t - deltaLambda * (f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.t
 		- 2. * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.x
 		- 2. * f * fv.y * warpBubbleVelocity * warpBubbleVelocity / 2. * vel.t * vel.y
 		- 2. * f * fv.z * warpBubbleVelocity * warpBubbleVelocity / 2. * vel.t * vel.z
@@ -356,7 +223,6 @@ void main() {
 		+ 2. * fv.y * warpBubbleVelocity / 2. * vel.x * vel.y
 		+ 2. * fv.z * warpBubbleVelocity / 2. * vel.x * vel.z
 	);
-	gl_FragColor = floatToFixed(newVelT);
 }
 		</script>
 		<style type='text/css'>
