--- a/index.fbo.html
+++ b/index.fbo.html
@@ -40,13 +40,13 @@ float sechSq(float x) {
 }
 		</script>
 		<script id='cube-vsh' type='x-shader/x-vertex'>
-attribute vec2 vtx;
+attribute vec2 vertex;
 varying vec2 uv;
 uniform mat4 mvMat;
 uniform mat4 projMat;
 void main() {
-	uv = vtx;
-	vec4 vtx4 = mvMat * vec4(vtx * 2. - 1., 1., 1.);
+	uv = vertex;
+	vec4 vtx4 = mvMat * vec4(vertex * 2. - 1., 1., 1.);
 	gl_Position = projMat * vtx4;
 }
 		</script>
@@ -69,15 +69,15 @@ void main() {
 }
 		</script>
 		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:pos:vel:vsh' type='x-shader/x-vertex'>
-attribute vec2 vtx;
+attribute vec2 vertex;
 varying vec3 vtxv;
 uniform mat3 rotation;
 void main() {
-	vtxv = rotation * vec3(vtx * 2. - 1., 1.);
-	gl_Position = vec4(vtx * 2. - 1., 0., 1.);
+	vtxv = rotation * vec3(vertex * 2. - 1., 1.);
+	gl_Position = vec4(vertex * 2. - 1., 0., 1.);
 }
 		</script>
-		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:reset:pos:fsh' type='x-shader/x-fragment'>
+		<script id='Black_Hole:reset:pos:fsh' type='x-shader/x-fragment'>
 #extension GL_OES_texture_float : enable
 varying vec3 vtxv;
 uniform float objectDist;
@@ -85,6 +85,15 @@ void main() {
 	vec3 dir = normalize(vtxv);
 	gl_FragColor.xyz = dir;
 	gl_FragColor.x -= objectDist;
+	gl_FragColor.w = 0.;
+}
+		</script>
+		<script id='Alcubierre_Warp_Drive_Bubble:reset:pos:fsh' type='x-shader/x-fragment'>
+#extension GL_OES_texture_float : enable
+varying vec3 vtxv;
+void main() {
+	vec3 dir = normalize(vtxv);
+	gl_FragColor.xyz = dir;
 	gl_FragColor.w = 0.;
 }
 		</script>
@@ -120,8 +129,7 @@ void main() {
 		</script>
 		<script id='Alcubierre_Warp_Drive_Bubble:reset:vel:fsh' type='x-shader/x-fragment'>
 	vec3 pos = vel;
-	pos.x -= objectDist;
-	float r = length(pos);
+	float r = length(pos - vec3(objectDist,0.,0.));
 	float sigmaFront = warpBubbleThickness * (r + warpBubbleRadius);
 	float sigmaCenter = warpBubbleThickness * r;
 	float sigmaBack = warpBubbleThickness * (r - warpBubbleRadius);
@@ -139,14 +147,14 @@ void main() {
 		</script>
 		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:vel:vsh' type='x-shader/x-vertex'>
 #extension GL_OES_texture_float : enable
-attribute vec2 vtx;
+attribute vec2 vertex;
 varying vec2 uv;
 varying vec3 vtxv;
 uniform mat3 rotation;
 void main() {
-	uv = vtx;
-	vtxv = rotation * vec3(vtx * 2. - 1., 1.);
-	gl_Position = vec4(vtx * 2. - 1., 0., 1.);
+	uv = vertex;
+	vtxv = rotation * vec3(vertex * 2. - 1., 1.);
+	gl_Position = vec4(vertex * 2. - 1., 0., 1.);
 }
 		</script>
 		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:vel:fsh' type='x-shader/x-fragment'>
