--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@ _gaq.push(['_trackPageview']);
 		<script id='cube-vsh' type='x-shader/x-vertex'>
 attribute vec3 vertex;
 varying vec3 vertexv;
-uniform mat4 mvMat;
 uniform mat4 projMat;
+
+const mat3 viewMatrixInv = mat3(
+	0., 1., 0.,
+	0., 0., -1.,
+	-1., 0., 0.);
 void main() {
-	vertexv = vertex;
-	gl_Position = projMat * mvMat * vec4(vertex, 1.);
+	vertexv = viewMatrixInv * vertex;
+	gl_Position = projMat * vec4(vertex, 1.);
 }
 		</script>
 		<script id='cube-fsh' type='x-shader/x-fragment'>
@@ -37,9 +41,18 @@ precision mediump float;
 varying vec3 vertexv;
 uniform samplerCube skyTex;
 uniform samplerCube lightPosTex;
+const mat3 viewMatrix = mat3(
+	0., 0., -1.,
+	1., 0., 0., 
+	0., -1., 0.);
 
+uniform vec4 viewAngle;
+vec3 qtransform( vec4 q, vec3 v ){ 
+	return v + 2.0*cross(cross(v, q.xyz ) + q.w*v, q.xyz);
+}
 void main() {
 	vec3 dir = textureCube(lightPosTex, vertexv).xyz * 2. - 1.;
+	dir = qtransform(vec4(viewAngle.xyz, -viewAngle.w), viewMatrix * dir);
 	gl_FragColor = textureCube(skyTex, dir);
 	gl_FragColor.w = 1.; 
 }
