added radio for switching between software and fbo

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@ a:active {
 			Warp Bubble Thickness: <input id='warpBubbleThickness'/><br>
 			Warp Bubble Velocity (c): <input id='warpBubbleVelocity'/><br>
 			Warp Bubble Radius: <input id='warpBubbleRadius'/><br>
+			<input type='radio' group='1' checked>Software update</input><br>
+			<input type='radio' group='1' onclick='location.href="index.fbo.html"'>FBO update</input><br>
 			<button id='reset'>Reset</button><br>
 			<!-- button id='pause'>Pause</button><br -->
 			<!-- Update: <progress id='update-progress' max='100' value='0'></progress><br> -->
