mipmap on non-fbo, fixed input

--- a/index.fbo.html
+++ b/index.fbo.html
@@ -9,7 +9,8 @@
 		<script type='text/javascript' src='../js/gl-matrix-min.js'></script>
 		<script type='text/javascript' src='../js/webgl-debug.js'></script>
 		<script type='text/javascript' src='../js/gl-util.js'></script>
-		<script type='text/javascript' src='../js/gl-util-pingpong.js'></script>
+		<script type='text/javascript' src='../js/gl-util-unitquad.js'></script>
+		<script type='text/javascript' src='../js/gl-util-kernel.js'></script>
 		<script type='text/javascript' src='../js/mouse3d.js'></script>
 		<script type='text/javascript' src='main.fbo.js'></script>
 		
