--- a/index.fbo.html
+++ b/index.fbo.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Black Hole Iterative Skymap - WebGL</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="apple-mobile-web-app-capable" content="yes"/>
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 
-		<meta charset='UTF-8'>
 		<script type='text/javascript' src='../js/jquery-1.10.0.min.js'></script>
 		<script type='text/javascript' src='../js/util.js'></script>
 		<script type='text/javascript' src='../js/gl-matrix-min.js'></script>
