found another bug: coord system was spun 180 on the fwd axis.  fixed it.  then changed the mapping from src image to correct y direction and maintain right-handedness.

--- a/index.fbo.html
+++ b/index.fbo.html
@@ -286,6 +286,7 @@ a:active {
 			Warp Bubble Thickness: <input id='warpBubbleThickness'/><br>
 			Warp Bubble Velocity (c): <input id='warpBubbleVelocity'/><br>
 			Warp Bubble Radius: <input id='warpBubbleRadius'/><br>
+			<input type='radio' group='1' onclick='location.href="testcube.html"'>Test Cube</input><br>
 			<input type='radio' group='1' onclick='location.href="index.html"'>Software update</input><br>
 			<input type='radio' group='1' checked>FBO update</input><br>
 			<button id='reset'>Reset</button><br>
