--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@ _gaq.push(['_trackPageview']);
 attribute vec3 vertex;
 varying vec3 vertexv;
 uniform mat4 projMat;
-
 const mat3 viewMatrixInv = mat3(
 	0., 1., 0.,
 	0., 0., -1.,
@@ -46,14 +45,10 @@ precision mediump float;
 varying vec3 vertexv;
 uniform samplerCube skyTex;
 uniform samplerCube lightVelTex;
-//why does the y axis have to be flipped?
-//something to do with our texture upload having its y flipped?
-//how do I fix that?
-//...or is it that I'm using/notusing unpack_flip_y in my test case by which i aligned my cube side transformations, and that should be reversed?
 const mat3 viewMatrix = mat3(
 	0., 0., -1.,
 	1., 0., 0., 
-	0., 1., 0.);
+	0., -1., 0.);
 
 uniform vec4 viewAngle;
 vec3 qtransform( vec4 q, vec3 v ){ 
@@ -109,6 +104,7 @@ a:active {
 				Warp Bubble Velocity (c): <input id='warpBubbleVelocity'/><br>
 				Warp Bubble Radius: <input id='warpBubbleRadius'/><br>
 			</div>
+			<input type='radio' group='1' onclick='location.href="testcube.html"'>Test Cube</input><br>
 			<input type='radio' group='1' checked>Software update</input><br>
 			<input type='radio' group='1' onclick='location.href="index.fbo.html"'>FBO update</input><br>
 			<button id='reset'>Reset</button><br>
