changed js folder paths to be absolute.  changed fbo version to use gl-util-unitquad.

--- a/testcube.html
+++ b/testcube.html
@@ -7,12 +7,12 @@
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 		
-		<script type='text/javascript' src='../js/jquery-1.10.0.min.js'></script>
-		<script type='text/javascript' src='../js/util.js'></script>
-		<script type='text/javascript' src='../js/gl-matrix-min.js'></script>
-		<script type='text/javascript' src='../js/webgl-debug.js'></script>
-		<script type='text/javascript' src='../js/gl-util.js'></script>
-		<script type='text/javascript' src='../js/mouse3d.js'></script>
+		<script type='text/javascript' src='/js/jquery-1.10.0.min.js'></script>
+		<script type='text/javascript' src='/js/util.js'></script>
+		<script type='text/javascript' src='/js/gl-matrix-min.js'></script>
+		<script type='text/javascript' src='/js/webgl-debug.js'></script>
+		<script type='text/javascript' src='/js/gl-util.js'></script>
+		<script type='text/javascript' src='/js/mouse3d.js'></script>
 		<script type='text/javascript' src='testcube.js'></script>
 		
 <script type='text/javascript'>
