--- a/index.fbo.html
+++ b/index.fbo.html
@@ -7,14 +7,14 @@
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 
-		<script type='text/javascript' src='../js/jquery-1.10.0.min.js'></script>
-		<script type='text/javascript' src='../js/util.js'></script>
-		<script type='text/javascript' src='../js/gl-matrix-min.js'></script>
-		<script type='text/javascript' src='../js/webgl-debug.js'></script>
-		<script type='text/javascript' src='../js/gl-util.js'></script>
-		<script type='text/javascript' src='../js/gl-util-unitquad.js'></script>
-		<script type='text/javascript' src='../js/gl-util-kernel.js'></script>
-		<script type='text/javascript' src='../js/mouse3d.js'></script>
+		<script type='text/javascript' src='/js/jquery-1.10.0.min.js'></script>
+		<script type='text/javascript' src='/js/util.js'></script>
+		<script type='text/javascript' src='/js/gl-matrix-min.js'></script>
+		<script type='text/javascript' src='/js/webgl-debug.js'></script>
+		<script type='text/javascript' src='/js/gl-util.js'></script>
+		<script type='text/javascript' src='/js/gl-util-unitquad.js'></script>
+		<script type='text/javascript' src='/js/gl-util-kernel.js'></script>
+		<script type='text/javascript' src='/js/mouse3d.js'></script>
 		<script type='text/javascript' src='main.fbo.js'></script>
 		
 <script type='text/javascript'>
